--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@xstate/react": "^3.0.1",
     "chroma-js": "^2.4.2",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -18,7 +20,8 @@
     "xstate": "^4.33.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start" : "node src/serve.js",
+    "run": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
