--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "xstate": "^4.33.6"
   },
   "scripts": {
-    "run" : "node src/serve.js",
+    "build" : "node src/serve.js",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-real": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
