added tv event listener

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "half-double",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zevysaloff.github.io/half-double",
   "engines": {
     "node": "16.x"
   },
@@ -12,6 +13,7 @@
     "@xstate/react": "^3.0.1",
     "chroma-js": "^2.4.2",
     "express": "^4.18.2",
+    "gh-pages": "^4.0.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,11 +22,12 @@
     "xstate": "^4.33.6"
   },
   "scripts": {
-    "build" : "node src/serve.js",
     "start": "react-scripts start",
-    "build-real": "react-scripts build",
+    "build": "react-scripts build && cp -r .git build/",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
